# fungenome-classifier

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  create_features.sh  environment.yml  pixi.toml  pyproject.toml
configs/: deep_fusion.yaml  default.yaml
data/raw/: metadata.tsv
docs/: data_preparation.md  feature_engineering.md  model_architecture.md  phylo_cv.md
fungal_classifier/: __init__.py
fungal_classifier/evaluation/: __init__.py  embeddings.py  metrics.py  phylo_cv.py  shap_analysis.py
fungal_classifier/features/: __init__.py  composition.py  disorder.py  domains.py  fusion.py  genomic.py  introns.py  kmer.py  motifs.py  pathways.py  proteases.py  repeats.py  subcellular.py
fungal_classifier/models/: __init__.py  block_classifier.py  deep_fusion.py  fusion_model.py
fungal_classifier/utils/: __init__.py  io.py  phylo.py  preprocessing.py
notebooks/: 01_feature_exploration.ipynb  02_phylo_signal_analysis.ipynb  03_shap_interpretation.ipynb
scripts/: 00_build_metadata.py  01_build_features.py  02_train.py  03_evaluate.py  04_predict.py  05_compare_targets.py  06_export_embeddings.py
tests/: test_features.py  test_integration.py  test_models.py  test_phylo_cv.py  test_preprocessing.py
