[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fungal-classifier"
version = "0.1.0"
description = "Phylogeny-aware multi-feature classifier for fungal genomes"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black",
    "ruff",
    "pre-commit",
    "nbformat",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fungal_classifier*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (integration tests, deselect with -m 'not slow')",
]
addopts = "-v --tb=short"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
fungal-classifier = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.4,<3.15"
numpy = ">=2.4.3,<3"
pytest = ">=9.0.3,<10"
yaml = ">=0.2.5,<0.3"
pyyaml = ">=6.0.3,<7"
